--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src= ¨https://cdn-s3.si.com/s3fs-public/styles/marquee_large_2x/public/2018/12/26/tua-tagovailoa-alabama-football-family-father.jpg?itok=UZy4YB3m¨
+<img src= ¨https://cdn-s3.si.com/s3fs-public/styles/marquee_large_2x/public/2018/12/26/tua-tagovailoa-alabama-football-family-father.jpg?itok=UZy4YB3m¨>
