--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <div>
-<p style="text-align: center;"><strong>College Football Playoff</strong></p>
+<h1 style="text-align: center;"><strong>College Football Playoff</strong></h1>
 </div>
-<div><img style="display: block; margin-left: auto; margin-right: auto;" src="https://upload.wikimedia.org/wikipedia/en/thumb/4/44/College_Football_Playoff_logo.svg/150px-College_Football_Playoff_logo.svg.png" width="245" height="273" /></div>
+<div><br /><img style="display: block; margin-left: auto; margin-right: auto;" src="https://upload.wikimedia.org/wikipedia/en/thumb/4/44/College_Football_Playoff_logo.svg/150px-College_Football_Playoff_logo.svg.png" width="245" height="273" /></div>
 <div>&nbsp;</div>
+<div>&nbsp;</div>
+<div><img style="display: block; margin-left: auto; margin-right: auto;" src="https://media.ksdk.com/assets/KSDK/images/619033171/619033171_360x203.jpg" alt="" width="299" height="168" /></div>
+<h1>&nbsp;</h1>
