--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <div>
-<h1 style="text-align: center;"><strong>College Football Playoff</strong></h1>
+
+  <h1 style="text-align: center;"><span style="background-color: #ff0000; color: #ff0000;"><span style="color: #000000;">Tua</span> <span style="background-color: #000000;">Tagovailoa</span></span></h1>
+
 </div>
-<div><br /><img style="display: block; margin-left: auto; margin-right: auto;" src="https://upload.wikimedia.org/wikipedia/en/thumb/4/44/College_Football_Playoff_logo.svg/150px-College_Football_Playoff_logo.svg.png" width="245" height="273" /></div>
-<div>&nbsp;</div>
-<div>&nbsp;</div>
-<div><img style="display: block; margin-left: auto; margin-right: auto;" src="https://media.ksdk.com/assets/KSDK/images/619033171/619033171_360x203.jpg" alt="" width="299" height="168" /></div>
+
+<div><br /><img style="display: block; margin-left: auto; margin-right: auto;" src="https://sportshub.cbsistatic.com/i/r/2019/10/20/7d8efbd9-f69a-4cac-8471-9817f61fd6aa/thumbnail/1200x675/97ac1c966c5ad32fcb721b926bb4c86b/tua-tagovailoa-alabama-ankle.jpg" alt="" width="554" height="311" /></div>
+
+<div><img style="display: block; margin-left: auto; margin-right: auto;" src="https://media.ksdk.com/assets/KSDK/images/619033171/619033171_360x203.jpg" alt="" width="555" height="311" /></div>
+
 <h1>&nbsp;</h1>
