--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div>
-<h1 style="text-align: center;"><span style="background-color: #ff0000; color: #ff0000;"><span style="color: #000000;">Tua</span> <span style="background-color: #000000;">Tagovailoa</span></span></h1>
-<p>&nbsp;</p>
+<h1 style="text-align: center;"><span style="background-color: #ffffff; color: #000000;">Tua Tagovailoa</span></h1>
+<p>&nbsp;<img style="display: block; margin-left: auto; margin-right: auto;" src="https://sportshub.cbsistatic.com/i/r/2019/10/20/7d8efbd9-f69a-4cac-8471-9817f61fd6aa/thumbnail/1200x675/97ac1c966c5ad32fcb721b926bb4c86b/tua-tagovailoa-alabama-ankle.jpg" alt="" width="554" height="311" /></p>
 <h3 style="text-align: center;"><span style="background-color: #ffffff; color: #000000;">Early Childhood</span></h3>
 <blockquote>
 <p style="text-align: left;"><span style="background-color: #ffffff; color: #000000;">&nbsp; &nbsp; &nbsp;Tua Tagovailoa was born on March 2, 1998, in Ewa Beach, Hawaii. He is the oldest of four children in his athletic family. Tua grew up loving the game of football, as he would sleep with a football under his blanket every night. His father, Galu, trained him at the age of two, forcing him to throw with his left hand instead of his right. His biggest inspiration growing up as a kid was his grandfather, Seu, also known as "Chief Tagovailoa".</span></p>
@@ -12,7 +12,7 @@
 </blockquote>
 </div>
 <p style="text-align: center;">College Career <a href="Stats.html">Stats and Records</a></p>
-<div><br /><img style="display: block; margin-left: auto; margin-right: auto;" src="https://sportshub.cbsistatic.com/i/r/2019/10/20/7d8efbd9-f69a-4cac-8471-9817f61fd6aa/thumbnail/1200x675/97ac1c966c5ad32fcb721b926bb4c86b/tua-tagovailoa-alabama-ankle.jpg" alt="" width="554" height="311" /></div>
+<div><br /><br /></div>
 <div>&nbsp;</div>
 <div>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<iframe src="//www.youtube.com/embed/h6YVZJ3n1Ow" width="554" height="311" allowfullscreen="allowfullscreen"></iframe></div>
 <div>&nbsp;</div>
