--- a/Stats-Records.html
+++ b/Stats-Records.html
@@ -1,11 +1,10 @@
 <h1 style="text-align: center;">Tua Tagovailoa</h1>
 <h1 style="text-align: center;">Stats &amp; Records</h1>
-
 <p>&nbsp;</p>
 <h4 style="text-align: center;">&nbsp;</h4>
 <h3 style="text-align: center;">The chart below shows Tua Tagovailoa's</h3>
 <h3 style="text-align: center;">College Football Career Stats</h3>
-<p>&nbsp;</p>
+<p><span style="background-color: #ffffff;">&nbsp;</span></p>
 <table class="wikitable">
 <tbody>
 <tr>
@@ -99,7 +98,7 @@
 </tr>
 </tbody>
 </table>
-<h3 style="text-align: center;">&nbsp;</h3>
+<h3 style="text-align: center;"><span style="color: #000000; background-color: #ffffff;">&nbsp;</span></h3>
 <h3 style="text-align: center;">&nbsp;</h3>
 <h3 style="text-align: center;">The list below shows Tua Tagovailoa's records he has set</h3>
 <p>&nbsp;</p>
