--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+  <head><title>Tua Tua Tua</title></head>
+  <body>
 <div>
 <h1 style="text-align: center;"><span style="background-color: #ffffff; color: #000000;">Tua Tagovailoa</span></h1>
 <p>&nbsp;<img style="display: block; margin-left: auto; margin-right: auto;" src="https://sportshub.cbsistatic.com/i/r/2019/10/20/7d8efbd9-f69a-4cac-8471-9817f61fd6aa/thumbnail/1200x675/97ac1c966c5ad32fcb721b926bb4c86b/tua-tagovailoa-alabama-ankle.jpg" alt="" width="554" height="311" /></p>
@@ -18,3 +21,7 @@
 <div>&nbsp;</div>
 <div>&nbsp;</div>
 <h1>&nbsp;</h1>
+
+<p style="text-align: center;"><a href="Awards-Honors.html">Awards and Honors</a></p>
+  </body>
+</html>
