--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p>&nbsp; &nbsp; &nbsp;In 2019, Tua Tagovailoa was the same quarterback we saw before his injury in the previous year. The stats, in 2019, were off the roof, getting the attention of NFL scouts. Throughout the season, there were many projections of Tua going number 1 in the Upcoming NFL draft that year. Although another injury against Tennessee, setting him back for a couple of games. Tua returned the next couple of weeks, and still dominated the opposing team&acute;s defenses. While facing off against Mississippi State that year, Tua had a devastatinging injury. He scrambled outside of the pocket when finally two defenders tackled him. When Tua went down, He suffered a dislocated hip, a broken nose, and a concussion. Tagovailoa was on pace to have a Historical year not only for Alabama, but for the entire College Football world.&nbsp;</p>
 </blockquote>
 </div>
-<p style="text-align: center;">College Career <a href="Stats.html">Stats and Records</a></p>
+<p style="text-align: center;">College Career <a href="Stats-Records.html">Stats and Records</a></p>
 <div><br /><br /></div>
 <div>&nbsp;</div>
 <div>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<iframe src="//www.youtube.com/embed/h6YVZJ3n1Ow" width="554" height="311" allowfullscreen="allowfullscreen"></iframe></div>
